--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -4,19 +4,17 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#FBFBFB"
         tools:context=".DashBoardActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/userRecyclerview"
         android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/_8sdp"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:listitem="@layout/user_layout"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
