--- a/app/src/main/res/drawable/messagebox_background.xml
+++ b/app/src/main/res/drawable/messagebox_background.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="@dimen/_6sdp"/>
-        <stroke android:color="@color/teal_700" android:width="@dimen/_2sdp"/>
+        <stroke android:color="@color/chatcolor" android:width="@dimen/_2sdp"/>
 </shape>
