--- a/app/src/main/res/drawable/messagereceivebox.xml
+++ b/app/src/main/res/drawable/messagereceivebox.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="@dimen/_6sdp"/>
-    <stroke android:color="@color/purple_700" android:width="@dimen/_2sdp"/>
+    <corners android:radius="@dimen/_20sdp"/>
+    <stroke android:color="#ECEBE9" android:width="@dimen/_2sdp"/>
 </shape>
