--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="activity_horizontal_margin" />
     <dimen name="activity_vertical_margin" />
     <dimen name="nav_header_vertical_spacing" />
+
+    <dimen name="profile_image_margin_start">5dp</dimen>
+
+
 </resources>
