--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -16,46 +16,57 @@
 
     <LinearLayout
         android:id="@+id/chatTypeLl"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginEnd="61dp"
         android:layout_marginBottom="0dp"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/_3sdp"
         android:weightSum="100">
 
         <LinearLayout
-            android:layout_width="321dp"
+            android:layout_width="313dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/messagereceivebox"
             android:paddingTop="@dimen/_5sdp"
             android:paddingBottom="@dimen/_3sdp">
 
             <EditText
                 android:id="@+id/edtmessagebox"
-                android:layout_width="match_parent"
+                android:layout_width="296dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_2sdp"
-                android:layout_weight="90"
+                android:layout_weight="80"
                 android:background="@android:color/transparent"
                 android:hint="Enter Your Message"
-                android:padding="@dimen/_5sdp"
-
-                />
+                android:maxLines="1"
+                android:padding="@dimen/_5sdp" />
         </LinearLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="@dimen/_7sdp"
+        android:layout_alignParentBottom="true">
 
         <ImageView
             android:id="@+id/ivsendmessage"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
+            android:layout_width="51dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
             android:layout_marginStart="@dimen/_2sdp"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:background="@drawable/send" />
-
-
     </LinearLayout>
 </RelativeLayout>
