--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"
       android:title="Logout"/>
@@ -9,6 +10,12 @@
           android:icon="@drawable/ic_menu_camera"
           android:title="Photo" />
 
-
+   <item
+       android:title="searchUser"
+       android:id="@+id/search"
+       android:orderInCategory="100"
+       app:showAsAction="ifRoom"
+       android:icon="@drawable/serach"
+       app:actionViewClass="android.widget.SearchView" />
 
 </menu>
