--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="chatcolor">#4C317B</color>
     <color name="chatsendmessage">#C0C0C1</color>
     <color name="chatreceivemessage">#7552B3</color>
+    <color name="blackgrey">#01111e</color>
     <color name="colorTransparent">#00000000</color>
 </resources>
