--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -13,8 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" />
 
-
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:id="@+id/chatTypeLl"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -23,40 +22,54 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="61dp"
         android:layout_marginBottom="0dp"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/_3sdp"
-        android:weightSum="100">
+        app:cardCornerRadius="8dp">
 
         <LinearLayout
-            android:layout_width="313dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:background="@drawable/messagereceivebox"
+            android:orientation="horizontal"
             android:paddingTop="@dimen/_5sdp"
             android:paddingBottom="@dimen/_3sdp">
 
             <EditText
                 android:id="@+id/edtmessagebox"
-                android:layout_width="296dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_marginEnd="@dimen/_2sdp"
-                android:layout_weight="80"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:hint="Enter Your Message"
                 android:maxLines="1"
-                android:padding="@dimen/_5sdp" />
+                android:padding="@dimen/_5sdp"
+                android:focusable="true"
+                android:cursorVisible="false"
+                android:focusableInTouchMode="true"
+             />
+
+            <ImageView
+                android:id="@+id/ivCamera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3sdp"
+                android:src="@drawable/ic_menu_camera"
+                android:visibility="visible" />
+
+            <ImageView
+                android:id="@+id/ivAttachFile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3sdp"
+                android:src="@drawable/ic_baseline_attach_file_24"
+                android:visibility="visible" />
         </LinearLayout>
-
-
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="50dp"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="@dimen/_7sdp"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="-1dp"
+        android:layout_marginBottom="-2dp">
 
         <ImageView
             android:id="@+id/ivsendmessage"
