--- a/app/src/main/res/layout/receive_layout.xml
+++ b/app/src/main/res/layout/receive_layout.xml
@@ -9,11 +9,16 @@
     android:layout_marginEnd="@dimen/_50sdp"
     android:paddingBottom="@dimen/_10sdp">
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_8sdp"
         app:cardBackgroundColor="@color/chatsendmessage"
         app:cardCornerRadius="@dimen/_8sdp">
+        <ImageView
+            android:id="@+id/ivSelectedReciveImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tvreceivemessage"
@@ -21,10 +26,26 @@
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/_10sdp"
             android:paddingRight="@dimen/_10sdp"
+            android:visibility="visible"
             android:text="This is chudail"
             android:paddingTop="@dimen/_2sdp"
-            android:paddingBottom="@dimen/_2sdp"
+            android:paddingBottom="@dimen/_10sdp"
             android:textColor="@color/white"
             android:textSize="@dimen/_16sdp" />
+
+
+       <TextView
+        android:id="@+id/tvReceiveChatTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/_5sdp"
+        android:layout_gravity="end|bottom"
+        android:textColor="@color/white"
+           android:textSize="@dimen/_8sdp"
+        android:text="Time" />
+
+
     </com.google.android.material.card.MaterialCardView>
+
+
 </RelativeLayout>
