--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background = "@drawable/spark"
     android:layout_height="match_parent"
     tools:context=".ChatActivity">
 
@@ -15,12 +16,11 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/chatTypeLl"
-        android:layout_width="350dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="61dp"
         android:layout_marginBottom="0dp"
         app:cardCornerRadius="8dp">
 
@@ -60,26 +60,35 @@
                 android:padding="@dimen/_3sdp"
                 android:src="@drawable/ic_baseline_attach_file_24"
                 android:visibility="visible" />
+
+            <ImageView
+                android:id="@+id/ivsendmessage"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:src="@drawable/send" />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <LinearLayout
-        android:layout_width="50dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="-1dp"
-        android:layout_marginBottom="-2dp">
+<!--    <LinearLayout-->
+<!--        android:layout_width="50dp"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginEnd="-1dp"-->
+<!--        android:layout_marginBottom="-2dp">-->
 
-        <ImageView
-            android:id="@+id/ivsendmessage"
-            android:layout_width="51dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="@dimen/_2sdp"
-            android:layout_marginEnd="8dp"
-            android:layout_weight="1"
-            android:background="@drawable/send" />
-    </LinearLayout>
+<!--        <ImageView-->
+<!--            android:id="@+id/ivsendmessage"-->
+<!--            android:layout_width="51dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_marginStart="@dimen/_2sdp"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:background="@drawable/send" />-->
+<!--    </LinearLayout>-->
 </RelativeLayout>
