--- a/app/src/main/res/layout/receive_layout.xml
+++ b/app/src/main/res/layout/receive_layout.xml
@@ -30,7 +30,7 @@
             android:text="This is chudail"
             android:paddingTop="@dimen/_2sdp"
             android:paddingBottom="@dimen/_10sdp"
-            android:textColor="@color/white"
+            android:textColor="@color/blackgrey"
             android:textSize="@dimen/_16sdp" />
 
 
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/_5sdp"
         android:layout_gravity="end|bottom"
-        android:textColor="@color/white"
+        android:textColor="@color/blackgrey"
            android:textSize="@dimen/_8sdp"
         android:text="Time" />
 
