--- a/app/src/main/res/layout/user_layout.xml
+++ b/app/src/main/res/layout/user_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_50sdp"
+    android:background="@color/cardcolor"
     android:layout_marginTop="@dimen/_4sdp"
     app:cardBackgroundColor="@android:color/transparent"
     app:cardElevation="0dp"
@@ -13,6 +14,7 @@
         android:id="@+id/constraintLayoutName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/cardcolor"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp">
@@ -36,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:src="@drawable/coco"
+                android:src="@drawable/littleangel"
                 app:civ_border_color="#FF000000"
                 app:civ_border_width="1dp" />
 
