--- a/app/src/main/res/layout/receive_layout.xml
+++ b/app/src/main/res/layout/receive_layout.xml
@@ -2,12 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_marginTop="@dimen/_4sdp"
     android:layout_height="wrap_content"
     android:layout_gravity="start"
     android:gravity="start"
-    android:layout_marginEnd="@dimen/_50sdp"
     android:paddingBottom="@dimen/_10sdp">
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardView1"
         android:layout_width="wrap_content"
@@ -15,37 +14,40 @@
         android:layout_marginStart="@dimen/_8sdp"
         app:cardBackgroundColor="@color/chatsendmessage"
         app:cardCornerRadius="@dimen/_8sdp">
-        <ImageView
-            android:id="@+id/ivSelectedReciveImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/tvreceivemessage"
-            android:layout_width="wrap_content"
+<!--        <ImageView-->
+<!--            android:id="@+id/ivSelectedReciveImage"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content" />-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/_10sdp"
-            android:paddingRight="@dimen/_10sdp"
-            android:visibility="visible"
-            android:text="This is chudail"
-            android:paddingTop="@dimen/_2sdp"
-            android:paddingBottom="@dimen/_10sdp"
-            android:textColor="@color/blackgrey"
-            android:textSize="@dimen/_16sdp" />
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tvreceivemessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/_10sdp"
+                android:paddingRight="@dimen/_10sdp"
+                android:paddingTop="@dimen/_2sdp"
+                android:paddingBottom="@dimen/_10sdp"
+                android:text="This is chudail"
+                android:textColor="@color/blackgrey"
+                android:textSize="@dimen/_16sdp" />
 
-       <TextView
-        android:id="@+id/tvReceiveChatTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_5sdp"
-        android:layout_gravity="end|bottom"
-        android:textColor="@color/blackgrey"
-           android:textSize="@dimen/_8sdp"
-        android:text="Time" />
-
+            <TextView
+                android:id="@+id/tvReceiveChatTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:text="Time"
+                android:textColor="@color/blackgrey"
+                android:textSize="@dimen/_8sdp" />
+        </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
-
 
 </RelativeLayout>
