--- a/app/src/main/res/layout/activity_send_image.xml
+++ b/app/src/main/res/layout/activity_send_image.xml
@@ -64,10 +64,11 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
-            android:id="@+id/ivndmessage"
+            android:id="@+id/ivsendImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_2sdp"
+            android:onClick="sendImage"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:background="@drawable/send" />
