--- a/app/src/main/res/drawable/capture_button.xml
+++ b/app/src/main/res/drawable/capture_button.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#525A56" />
+    <solid android:color="#17B566" />
     <size
         android:width="118dp"
         android:height="118dp" />
