--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,58 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/cardcolor"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".LoginActivity">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/shapeableImageView2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintCircleRadius="@dimen/_10sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-
-            <pl.droidsonroids.gif.GifImageView
-                android:layout_width="415dp"
-                android:layout_height="307dp"
-                android:gravity="center"
-                android:src="@drawable/giflogin"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <pl.droidsonroids.gif.GifImageView
+            android:layout_width="@dimen/_150sdp"
+            android:layout_height="@dimen/_150sdp"
+            android:gravity="center"
+            android:layout_marginTop="@dimen/_25sdp"
+            android:src="@drawable/giflogin"
+            tools:ignore="MissingConstraints" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView2">
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_70sdp"
+            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar">
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -128,6 +103,7 @@
                 android:textSize="@dimen/_12sdp"
                 app:cornerRadius="@dimen/_14sdp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.07"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
@@ -135,14 +111,16 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_157sdp"
-                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_marginTop="16dp"
                 android:text="Forget Password?"
-                android:textColor="@color/purple_700"
+                android:textColor="@color/chatreceivemessage"
                 android:textSize="@dimen/_15sdp"
+                app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+                app:layout_constraintHorizontal_bias="0.828"
+                app:layout_constraintStart_toEndOf="@+id/btnLogin"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+                app:layout_constraintVertical_bias="0.469" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/rgisetruserbtn"
@@ -166,8 +144,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+    </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-</ScrollView>
+</LinearLayout>
